2012-12-04  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* tumblr/*: Added support for all entry types on Tumblr.

2012-12-03  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* tumblr/api.py, tumblr/account.py: Added support for 'post' &
	  'posts' API.

2012-11-28  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* utils/truncatehtml.py: Added HTML truncation for Tumblr.
	* po/id_ID.po: Added new Indonesian translation.  Thanks kuspoes!

2012-11-19  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 2.0.2 release.
	* theme.py, com.googlecode.gfeedline.gschema.xml.in: Changed the
	  name of default theme.
	* output.py: Fixed unread flags.

2012-11-18  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 2.0.1 release.
	* setup.py: Fixed data entries.

2012-11-17  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 2.0 release.
	* updatewindow.py: Fixed bugs in UpdateWindowOLD &
	  RetweetDialogOLD.

2012-11-12  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* view.py, facebook/account.py: Added support for auto account
	  selection for drag & drop updateing.

2012-11-05  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* es_ES.po: Updated Spanish translation.  Thanks Adolfo Jayme!
	* de_DE.po: Updated German translation.  Thanks t_bb_!
	* et.po: Updated Estonian translation.  Thanks Rivo Zängov!
	* ar.po: Updated Arabic translation.  Thanks Humaidan Mohammed!

2012-10-20  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* plugins/tumblr: Added a basic suppor fot Tumblr.

2012-10-16  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* window.py: Fixed a notebook pop-up menu.
	* updatewindow.py, facebook/account.py: Added support for Facebook
	  'Publish'.

2012-10-14  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* view.py, facebook/*: Added support for Facebook 'Like'.

2012-10-13  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.7.1 release.

2012-10-12  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* ar.po: Updated Arabic translation. Thanks Humaidan Mohammed!
