@@ -1,3 +1,7 @@
+2012-12-06  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* output.py: Added checking for duplicated posts.
+
 2012-12-04  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* tumblr/*: Added support for all entry types on Tumblr.
